--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.68.1"
 uvicorn = "^0.15.0"
 gunicorn = "^20.1.0"
 taskipy = "^1.8.1"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
