--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gunicorn = "^20.1.0"
 taskipy = "^1.8.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+python-multipart = "^0.0.5"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
