--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
           [
             --max-line-length,
             "88",
-            "--ignore=E402,B008",
+            "--ignore=E402,B008,CCR001",
             --max-complexity,
             "10",
             --max-expression-complexity=7,
