--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,4 +27,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.taskipy.tasks]
-start = { cmd = "uvicorn src.main:app --reload", help = "launch test server" }
+start = { cmd = "uvicorn app.main:app --reload", help = "launch test server" }
