--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ black = "^21.8b0"
 flake8 = "^3.9.2"
 pytest = "^6.2.5"
 isort = "^5.9.3"
+requests = "^2.26.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
